// Wirakorn Thanabat
// 6809617415

package escapeFromLandmines;

import escapeFromLandmines.Model.Vector2;

public interface Selectable {
    Vector2 choose(Vector2 coordinate);
}