// Wirakorn Thanabat
// 6809617415

package escapeFromLandmines;

public class TestGame {
    public static void main(String[] args) {
        Operator game = new Operator();
        game.run();
    }
}
