---
config:
    layout: elk
---

%% Wirakorn Thanabat
%% 6809617415

classDiagram
    %% === Built-in === %%
    class RuntimeException {
        <<built-in>>
    }
    %% --- Built-in --- %%

    %% === Model === %%
    class Model { <<container>> }
    class BoardObj {
        <<enumeration>>
        NONE
        LANDMINE
        OTHER
        +isSafe() boolean
    }
    class PlayerType {
        <<enumeration>>
        HUMAN
        COMPUTER
        OTHER
        +getType() String
    }
    class Vector2 {
        <<record>>
        +row : int 
        +col : int 
        +area() int 
    }
    %% --- Model --- %%

    %% === Constants === %%
    class Constants {
        +MINIMAL_MODE : boolean$
        +MINIMUM_LANDMINE : int$
        +INITIAL_HEALTH_POINT : int$
        +HUMAN_PLAYER_AMOUNT : int$
        +COMPUTER_PLAYER_AMOUNT : int$
        +BLAST_DAMAGE : int$
        +BOARD_SIZE : Vector2$
    }
    %% --- Constants --- %%

    %% === Board === %%
    class Board {
        -rand : Random$
        -board : ArrayList~ArrayList~BoardObj~~
        -playerBoard : char[][]
        -scope : Vector2
        -amountOfLandmines : int
        -usedLandmines : int
        Board(Vector2 scope, int amountOfLandmines)
        +setupBoard() void
        +choose(Vector2 coordinate) boolean
        +isReveal(Vector2 coordinate) boolean
        +revealAll() void
        +isOutOfLandmines() : boolean
    }
    %% --- Board --- %%

    %% === GameException === %%
    class GameException {
        <<container>>
    }
    class InvalidBoardInitializeException {
        <<exception>>
        InvalidBoardInitializeException(String message)
    }
    class InvalidGamePlayException {
        <<exception>>
        InvalidGamePlayException(String message)
    }
    %% --- GameException --- %%

    %% === Player === %%
    class Selectable {
        <<interface>>
        choose() Vector2
    }
    class Player {
        -healthPoint : int 
        -alive : boolean
        -playerType : PlayerType
        Player(int healthPoint)
        +reduceHealthPointBy(int damage) void
        +choose(Vector2 coordinate)* Vector2
    }
    class PlayerComputer {
        -rand : Random$
        -openedCoordinate : HashSet~Vector2~$
        PlayerComputer(int healthPoint)
    }
    class PlayerHuman {
        -id : int 
        +getId() int 
        PlayerHuman(int healthPoint, int id)
    }
    %% --- Player --- %%

    %% === IO === %%
    class Printer {
        Printer(OutputStream out)
        +println(String txt, boolean flush) void
        +bold(String txt) void
        +flush() void
    }

    class FastReader {
        FastReader(InputStream in)
        +nextInt() int
    }
    %% --- IO --- %%

    %% === Operator === %
    class Operator {
        -players : ArrayList~Player~
        -world : Board
        -boardScope : Vector2
        +run() void
        +setupGame() void
        +endGame() void
        -playerRound() void
        -processSinglePlayerTurn(Player player) void
        -inputCoordinate() Vector2
    }
    %% --- Operator --- %

    %% === TestGame === %%
    class TestGame {
        +main(String[] args)$ void
    }
    %% --- TestGame --- %%

    

    %% ========================================== %%
    %%               RELATIONSHIPS                %%
    %% ========================================== %%

    TestGame --> Operator
    Operator "one" --> "one" Board : control
    Operator "one" --o "many" Player : manages

    Operator --> FastReader
    Operator --> Printer
    Operator ..> Constants : uses

    PlayerComputer --|> Player
    PlayerHuman --|> Player
    Player ..|> Selectable : implements

    Model --* BoardObj
    Model --* PlayerType
    Model --* Vector2

    Board --> BoardObj
    Operator ..> PlayerType
    Player --> PlayerType
    Operator --> Vector2
    Constants --> Vector2
    Board --> Vector2
    Player ..> Vector2 : uses

    GameException --* InvalidBoardInitializeException
    GameException --* InvalidGamePlayException
    InvalidBoardInitializeException --|> RuntimeException
    InvalidGamePlayException --|> RuntimeException
    Operator ..> InvalidBoardInitializeException : throws
    Operator ..> InvalidGamePlayException : throws